Fix Input label spacing

--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -3,12 +3,13 @@
 
   &.input-active {
     .input-label {
-      transform: translateY(percentage(1 / 3)) scale(0.75);
+      transform: translateY(50%) scale(0.75);
+      color: color('grey-70');
     }
 
     .input-control {
-      padding-top: spacing(16);
-      padding-bottom: spacing(8);
+      padding-top: 1.125rem;
+      padding-bottom: 0.375rem;
     }
   }
 
@@ -177,6 +178,7 @@
 
   &.input-active {
     .input-control {
+      padding-top: spacing(16);
       padding-bottom: 0;
     }
   }
